# LN-Studio

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements_setup.txt  smart-state.json  start.py  tox.ini
.github/workflows/: publish.yml
docs/: conf.py  environment.yml  index.md
docs/modules/: modules.rst  smart-studio.components.rst  smart-studio.rst  smart-studio.utils.rst  smart_studio.components.rst  smart_studio.pages.rst  smart_studio.qtpynodeeditor_patches.rst  smart_studio.rst  smart_studio.utils.rst
sample_projects/calc2/: info.json
sample_projects/calc2/pipelines/: playback_vis.json
sample_projects/calculator/: func_vis_gui.json  func_vis_gui_dock.xml  func_vis_gui_dock_debug.xml
sample_projects/calculator/gui/: asd  asd.json  asd.xml  asd_dock_debug.xml  func_vis  func_vis.xml  func_vis_dock_debug.xml
sample_projects/calculator/pipelines/: ads  ads.json  ads.yml  asd  asd.json  asd.yml  func_vis  func_vis.json  func_vis.yml
sample_projects/calz3/: func_vis.yml  func_vis_gui_dock.xml  func_vis_gui_dock_debug.xml
src/: dev_qt.py
src/ln_studio/components/: edit_graph.py
src/ln_studio/pages/: debug.py  home.py
src/smart-studio/: config.py  main_qt.py  run.py
src/smart-studio/components/: node_views.py
src/smart_studio/: __init__.py  main.py  main_qt.py  migrate.py
src/smart_studio/components/: collabsible.py  edit.py  edit_graph.py  edit_node.py  node_views.py  notification.py  page.py  page_parent.py  scroll_label.py
src/smart_studio/components/views/: matplotlib.py  pyqt.py  vispy.py
src/smart_studio/pages/: config.py  debug.py  home.py  run.py
src/smart_studio/qtpydocking/: __init__.py  dock_widget_tab.py  floating_dock_container.py
src/smart_studio/qtpynodeeditor/: data_model_registry.py  flow_scene.py  flow_view.py  node_connection_interaction.py  node_painter.py
src/smart_studio/qtpynodeeditor_patches/: __init__.py  allow_cycles.py  auto_layout_extension.py  connection_draw_fix.py  context_menu.py  copy_nodes.py  multiple_inputs.py
src/smart_studio/static/: style.qss
src/smart_studio/utils/: state.py
tests/: entrypoint_test.py  gatter_and_test.py  math_floor_test.py  qtpynode_basic_test.py
