[project]
name = "Smart-Studio"
dynamic = ['version']
description = "Smart-Studio: QT based GUI for livenodes projects."
authors = [
    { name = "Yale Hartmann", email = "yale.hartmann@uni-bremen.de" }
]
# TODO: figure out how/if to add livenodes here... for now install manually in venv via:
# pip install . --extra-index-url https://package_puller:8qYs4hBAsmAHJ5AdS_y9@gitlab.csl.uni-bremen.de/api/v4/groups/368/-/packages/pypi/simple
# pip install -e . --extra-index-url https://package_puller:8qYs4hBAsmAHJ5AdS_y9@gitlab.csl.uni-bremen.de/api/v4/groups/368/-/packages/pypi/simple
dependencies = [
    "livenodes",
    "seaborn",
    "networkx",
    "numpy",
    "matplotlib",
    "vispy",
    "PyQt5",
    "python-dotenv",
    "qtpynodeeditor",
]

[project.scripts]
smart_studio = "smart_studio.main_qt:main"

[project.optional-dependencies]
dev = [
    "tox",
    "pytest>=7.0.1"
]

[build-system]
requires = [
    "setuptools>=48",
    "wheel",
    "setuptools_scm >= 2.0.0, <3",
    "setuptools-git-versioning"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
line-length = 140
target-version = ['py36']
skip-string-normalization = true